# Kairos

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  gpu_scheduler.py  pyproject.toml
.github/workflows/: precommit.yml  tests.yml
src/kairos/: __init__.py  gpu.py  logging.py  models.py  scheduler.py
tests/: __init__.py  conftest.py  test_scheduler_cpu.py  test_scheduler_gpu.py
