[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "kairos"
description = "A flexible job scheduler for running multiple jobs across multiple GPUs"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["gpu", "scheduler", "deep-learning"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "click>=8.0",
    "tqdm",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "flake8-docstrings",
    "pre-commit",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=kairos --cov-report=term-missing"
markers = [
    "gpu: marks tests that require GPU access",
    "cpu: marks tests that can run on CPU only - simulates GPU",
]

[tool.black]
line-length = 79
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3
